[package]
name = "rev-prox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
awc = { version = "3", features = ["rustls"] }
rustls = { version = "0.20.7" }
rustls-pemfile = "1"

futures-util = "0.3.25"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
async-stream = "0.3.3"
